Bug 101813 - Can't link writer section to a master document
Summary: Can't link writer section to a master document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3 all versions
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Michael Stahl
URL:
Whiteboard: target:5.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2016-08-31 11:01 UTC by Ludovic CHEVALIER
Modified: 2016-10-21 17:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludovic CHEVALIER 2016-08-31 11:01:12 UTC
Hi!

I'm on 5.2.0 version.

1. Create a master document;
2. Create a section in this master document (Menu Insert/Section);
3. Write something in this section;
4. Save this master document;
5. Create a writer document;
6. Insert a section in this document (Menu Insert/Section) and check the checkbox "Link";
7. Click the "Browse" button to choose the master document you've just selected before.

It's impossible to validate this selection with the "Open" button of the dialog box. But if we test to link a writer document section it a writer section, there is almost no problem ( https://bugs.documentfoundation.org/show_bug.cgi?id=101795 ).

I know it was possible in previous versions (I believe like 3.X.X).
Comment 1 Buovjaga 2016-09-28 18:53:22 UTC
Yep, reproduced brokenness in 5.3 and confirm it works OK in 3.6.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.3.0.0.alpha0+
Build ID: 7cf444454c0c27e2f6d764164ea880b87163f45a
CPU Threads: 8; OS Version: Linux 4.7; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on September 27th 2016

Arch Linux 64-bit
Version 3.6.7.2 (Build ID: e183d5b)
Comment 2 Xisco Faulí 2016-10-01 15:01:59 UTC
Regression introduced by

commit 805fd1ca343d6295b8114a24cc29bdac332f266d
Author:     Michael Stahl <mstahl@redhat.com>
AuthorDate: Mon May 19 18:31:54 2014 +0200
Commit:     Michael Stahl <mstahl@redhat.com>
CommitDate: Mon May 19 18:49:46 2014 +0200
    
fdo#78742: SfxFilterMatcher: respect requested document service if set
    
sfx2::DocumentInserter::CreateMediumList() creates a SfxFilterMatcher
that should match Writer filters only, but actually Calc filters may be
returned; check that the document service matches.
    
(regression from 3da8f3680556e0163f660a0a159930337c8c32ff)

Adding Cc: to Michael Stahl
Comment 3 Michael Stahl 2016-10-06 16:11:02 UTC
it turns out this was allowed by accident in LO 3.6 and wasn't really a supported feature.

but i've tweaked it now on master so you can insert master documents as sections again.
Comment 4 Commit Notification 2016-10-06 16:12:59 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e0d373bf5328bfe84079f094dd605bb8f4337330

tdf#101813 sw,sfx2: enable inserting master document as section

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 pierre-yves samyn 2016-10-21 17:06:56 UTC
Hi

Verified on windows 7/64 & Version: 5.3.0.0.alpha1+
Build ID: 8a796410ec8f440b4163b15b928347c499da7a8f
CPU Threads: 2; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2016-10-20_23:07:21
Locale: fr-FR (fr_FR); Calc: group

Regards
Pierre-Yves