tdf#101813 sw,sfx2: enable inserting master document as section

Traditionally only ordinary com.sun.star.text.TextDocument could be
inserted as a section but then commit
3da8f3680556e0163f660a0a159930337c8c32ff unintentionally enabled
inserting everything, including master documents
(com.sun.star.text.GlobalDocument).

I'm really not sure if this should be allowed or not but apparently
somebody finds it useful so here we add some crude hacks to enable it
(to be reverted in case it causes trouble).

(regression? from 805fd1ca343d6295b8114a24cc29bdac332f266d)

Change-Id: I439b2516fcbe54977ff04e487a920acd38c27152